# secure_mpc_communication

./: CMakeLists.txt  README.md
include/: crypto_utils.h  nanopb_utils.h  network_utils.h
proto/: auth.proto
src/: client.cpp  crypto_utils.cpp  nanopb_utils.cpp  network_utils.cpp  server.cpp
